# foolbox

./: Cargo.toml  README.md  decoded_meshdata_394453730.meshdata
meshdata/: 385416572.childdata.childdata.rbxm  385416572.childdata.childdata.rbxmx  385416572.childdata.rbxm  385416572.childdata.rbxmx  385416572.rbxm  385416572.rbxmx  4500696697_4.meshdata  decoded_meshdata.meshdata  meshdata.txt
src/: main.rs
