[package]
name = "foolbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#lto = true
strip = true
codegen-units = 1

[dependencies]
fixed_wide = { version = "0.1.1", registry = "strafesnet" }
rayon = "1.10.0"
