[package]
name = "foolbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#lto = true
strip = true
codegen-units = 1

[dependencies]
hash_str = { version = "0.1.2", features = ["serde"]}
rmp-serde = "1.3.0"
